css/style.css
/* ... */
.sd_right_sidebar div.ribbon-more:after {
  content: ' ';
  position:absolute;
  width:0;
  height:0;
  top:100%;
  right:0;
  border-width:0 0 15px 15px;
  border-style: solid;
}

/* sidebar ribbons */

.ribbon-bg-blue {
  position: absolute;
  top: 0;
  left: 0;
  height: 36px;
  width: 100%;
}
.ribbon-bg-blue:before {
  content: ' ';
  position:absolute;
  width:0;
  height:0;
  top:100%;
  left:-10px;
  border-width:10px 0 0 10px;
  border-style: solid;
}
.ribbon-bg-blue:after {
  content: ' ';
  position:absolute;
  width:0;
  height:0;
  top:100%;
  right:-10px;
  border-width:0 0 10px 10px;
  border-style: solid;
}
.ribbon-bg-blue .ribbon-shadow {
  position:absolute;
  top: 34px;
  left: 0px;
  height: 1px;
  width: 100%;
  -webkit-box-shadow:  0px 3px 3px 0px rgba(0, 0, 0, 1);
  -moz-box-shadow:  0px 3px 3px 0px rgba(0, 0, 0, 1);
  box-shadow:  0px 3px 3px 0px rgba(0, 0, 0, 1);
}
.ribbon-left-blue {
  position: absolute;
  top: 0;
  left:-10px;
  height: 100%;
  width: 10px;
}
.ribbon-right-blue {
  position: absolute;
  top: 0;
  left:100%;
  height: 100%;
  width: 10px;
}

/* sidebar right ribbon styling */

#sidebar div.ribbon-cut-blue {
  position:absolute;
  top:10px;
  left:100%;
  height: 100%;
  width: 60px;
}

/* sidebar left ribbon styling */

#sidebar_left div.ribbon-cut-blue {
  position:absolute;
  top:10px;
  left:-60px;
  height: 100%;
  width: 60px;
}

/* Home Button */


#home {
  float: left;
  border-right:#aaa 1px solid;
  margin-right:4px;
  margin-left:15px;
  height: 36px;
}
#home a:hover{
  opacity: 0.5
}
#nohome {
  float: left;
  margin-right:4px;
  margin-left:5px;
  height: 35px;
}

/* Search Bar */

.searchform {
  margin: 40px 5px 10px 5px
}
.search-container {
  width: 80%;
  position: relative;
  margin-left: 10px;
}
.searchform .iRibbon-search {
  height: 25px;
  width: 95%;
  line-height: 1.2em;
  font-size: 1.2em;
  padding: 0 20px 0 2px;
  border: 1px solid #666;
  -moz-border-radius-topleft: 3px;
  -moz-border-radius-topright: 3px;
  -moz-border-radius-bottomright: 3px;
  -moz-border-radius-bottomleft: 3px;
  -webkit-border-radius: 3px 3px 3px 3px;
  border-radius: 3px 3px 3px 3px;
  -webkit-box-shadow: inset 1px 1px 1px 1px rgba(0,0,0, 0.1);
  -moz-box-shadow: inset 1px 1px 1px 1px rgba(0,0,0, 0.1);
  box-shadow: inset 1px 1px 1px 1px rgba(0,0,0, 0.1);
}
.search-button {
  position:absolute;
  top: 8px;
  right: -10px;
  color: #fff;
  cursor: pointer;
  width: 12px;
  height: 12px;
  background: url( '../images/magnify.png' ) no-repeat 0 0;
}

#sidebar .searchform {float: none;}

.center .searchform {float:none;}

#morefoot .searchform {float:left;}

/* search results */

.iribbon-search-term {
  font-weight: bold;
  margin-bottom: 20px;
  padding: 10px 10px 10px 30px;
  background: #ffffff url( '../images/magnify.png' ) no-repeat 5px 50%;
  border: 1px solid #A0673E;
}

.iribbon-search-term span {
  font-weight: normal;
}

/* Post Container Styling  */

.post_outer_container {
  position: relative;
  width: 100%;
  margin-left: -15px;
  padding: 0 15px 25px 15px;
  overflow: hidden;
}
.post_container {
	padding: 20px 15px 30px 15px;
	background: #fff;
  overflow: hidden;
}
.post_container ul {
  list-style: disc;
  margin-left: 21px;
  list-style-position: inside;
}
iframe {
  width: 100%;
}
  
.postformats {
	float:right;
	background: #fff;
	margin: -8px 0 0 0;
	height: 46px;
	width: 50px;
}
#comments {
  float: right;
  text-align:left;
  padding-top: 3px;
  font-size: 12px;
}
#share {
  text-align:left;
  float:left;
  padding-top: 3px;
}
.share a img {
  opacity:0.8;
}
.share a:hover img {
  opacity:1;
}
.next-posts-single {
  text-align:right;
  padding:5px;
  margin-top:-35px;
  margin-bottom: 5px;
}
.prev-posts-single {
  text-align:left;
  max-width:300px;
}
.tags {
  margin-bottom: 10px;
  font-size: 12px;
}
#fb {
  width: 440px;
  margin-bottom: 5px;
}
.gplusone {
  margin-bottom: 10px;
}
.post-edit-link {
  background-color: #757575;
  padding: 2px 3px;
  color: white;
  font-size: 10px;
  border-radius: 3px;
  -moz-border-radius: 3px;
}

/* Posts Navigation */

.next-posts {
  float: left;
  padding: 5px 0 5px 0;
}
.prev-posts {
  float: right;
  padding: 5px 0 5px 0;
}
#crumbs {
  background: transparent;
}
.crumbs_text {
  padding: 5px 0 0 15px;
}
#post_pagination {
  border: 1px solid #DDD;
  margin-bottom: 15px;
  background: #FFF;
}
.pagination_text {
  padding: 10px 15px 10px 15px;
  height: 20px;
}
.pagnext-posts {
  float: left;
  padding: 5px;
  margin-bottom: 10px;
}
.pagprev-posts {
  float: right;
  padding: 5px;
  margin-bottom: 10px;
}

/* HTML styling  */

dt {
  font-weight: bold;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-left: 26px;
}
dd {
  margin-bottom: 15px;
  margin-left: 26px;
}
ul, ol { 
	margin: 0 0 10px 0;
}
th {
  padding-right: 10px;
  padding-bottom: 10px;
}
td {
  border-top: 1px solid #DDD;
  padding: 6px 10px 6px 0;
}
table {
  border-bottom: 1px solid #DDD;
}
pre {
  margin-left: 20px;
}
ol, ul {
  list-style-position: inside;
  margin-left: 21px;
}

/* Sidebar  */

#sidebar {
  *margin-top: 15px;
  margin-bottom:15px;
  background:#bebebe
}
#sidebar_left {
  margin-bottom:15px;
  background:#bebebe
}
.sd_right_sidebar {
  padding-right: 15px;
}
.sd_left_sidebar {
  padding-left: 15px;
}
.widget-container {
  position: relative;
	color: #666;
  margin-top: 0;
	padding: 15px;
	background: transparent;
}
.widget-container:first-child {
  margin-top: 0;
}
.widget-container li {
  list-style: none;
  margin: 5px;
}
.widget-container li ul {
  margin-left: 2px;
}
.textwidget {
  padding-top: 10px;
}
.widget-title{
  position:absolute;
  top:0;
  left:10px;
  font-size:1.5em;
  font-family: 'Lobster', cursive;
  color: #e9ecc9;
  text-shadow:none;
  text-shadow: 1px 2px 2px rgba(0,0,0,0.5);
  filter: dropshadow(color=rgba(0,0,0,0.5), offx=1, offy=2);      
}
.widget-container > ul{
  margin-top: 40px;
  margin-left: 0px;
  margin-bottom:10px;
}
/* ... */

